  * regenerated API reference

* Wed Apr 24 16:09:28 2002, pabs <pabs@pablotron.org>
  * xmms.c: added examples/get_playlist.rb
  * released version 0.1.0

* Thu Apr 25 19:45:19 2002, pabs <pabs@pablotron.org>
  * xmms.c: added Xmms::Remote::connect (synonym for Xmms::Remote::new)
  * xmms.c: added Xmms::Remote::{list,pl} (synonyms for
    Xmms::Remote::playlist)
  * xmms.c: band calls throw exception if requested band is out of range

* Sun May 05 02:25:43 2002, pabs <pabs@pablotron.org>
  * xmms.c: added band contants previously, but forgot to mention it.
  * xmms.c: removed $XMMS; egregious namespace violation :)

* Mon May 13 13:11:16 2002, pabs <pabs@pablotron.org>
  * xmms.c: applied set_volume fix from Derrick Wood <dwood@cs.utsa.edu>
  * ChangeLog: modified ChangeLog format (added email address and file)
  * xmms.c: compiles clean with -pedantic (as clean as it can)

* Thu May 23 13:13:50 2002, pabs <pabs@pablotron.org>
  * doc: updated rdoc documentation
  * released version 0.1.1

* Sun Jul 28 16:27:29 2002, pabs <pabs@pablotron.org>
  * xmms.c: Fixed get_info bug reported by Charles Blackburn
    <charlesb@summerfield-technology.co.uk>

Thu Oct 31 10:44:58 2002, pabs <pabs@pablotron.org>
  * removed doc/ from CVS

* Sat Jul 10 14:24:29 2004, pabs <pabs@pablotron.org>
  * xmms.c: update documentation for get_playlist_time (fixes ambiguity
    reported by Ian Macdonald <ian@caliban.org>)
  * xmms.c: added block form to Xmms::Remote#playlist

* Sat Jul 10 14:51:30 2004, pabs <pabs@pablotron.org>
  * xmms.c: check to make sure session is running before executing remote
    commands; raise an Xmms::Error exception if it isn't.  This appears to fix
    the Xmms::Remote#get_info sillyness here.  Can anyone else confirm?
  * xmms.c: update documentation of all methods to reflect Xmms::Error
    behavior.
  * xmms.c: 'indexes' => 'indices'.  Did I learn english in a barn?
  * xmms.c: update documentation to reflect all possible exceptions