@@ -1,7 +1,7 @@
-XMMS-Ruby 0.1.1 README
+XMMS-Ruby 0.1.2 README
 ======================
 
-This document was last updated on Wednesday, April 24 12:42:05 2002 EDT.
+This document was last updated on Sat Jul 10 17:15:20 2004.
 Please see the file COPYING for licensing and warranty information.  The
 latest version of this library is available at the following URL:
 http://www.pablotron.org/software/xmms-ruby/.
