@@ -54,3 +54,9 @@ Thu Oct 31 10:44:58 2002, pabs <pabs@pablotron.org>
     behavior.
   * xmms.c: 'indexes' => 'indices'.  Did I learn english in a barn?
   * xmms.c: update documentation to reflect all possible exceptions
+
+* Sat Jul 10 17:14:07 2004, pabs <pabs@pablotron.org>
+  * xmms.c: fix xr_pl block mode 
+  * README: increment version number and date
+  * added examples/m3u.rb
+  * added examples/pls.rb
